[package]
name = "meta-ite"
version = "0.1.0"
authors = ["ravarspath <ravarspath@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtpbis = "0.1.5"
async-trait = "0.1.40"
mxdns = "0.2.2"
getopts = "0.2"
failure = "0.1"
futures= "0.3.5"
tokio = {version="0.2", features=["full"]}
tokio-rustls = "0.14.1"
rustyknife = "0.2.9"
futures-util = "0.3.5"
bytes = "0.5.6"
diesel = {version="1.4",features=["sqlite"]}
chrono = "0.4.15"